--- a/buyBooks/mainPage/templates/mainPage/mainPage.html
+++ b/buyBooks/mainPage/templates/mainPage/mainPage.html
@@ -21,7 +21,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <button onclick="location.href='#'">Purchase Vegetarian</button>
+                            
+                            <button onclick="location.href='{% url 'purchase' %}'">Purchase Vegetarian</button>
                         </td>
                     </tr>
                 </table>
